Prepare next release

--- a/content/Dwt/Dwt.Api/Dwt.Api.csproj
+++ b/content/Dwt/Dwt.Api/Dwt.Api.csproj
@@ -23,4 +23,8 @@
     <ProjectReference Include="..\Dwt.Shared\Dwt.Shared.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Controllers\Samples\" />
+  </ItemGroup>
+
 </Project>
