--- a/content/Dwt/.editorconfig
+++ b/content/Dwt/.editorconfig
@@ -19,7 +19,7 @@ charset = utf-8-bom
 
 # Code files
 [*.{cs,csx,vb,vbx}]
-insert_final_newline = false
+insert_final_newline = true
 charset = utf-8-bom
 end_of_line = lf
 
