--- a/content/Dwt/Dwt.Api/appsettings.json
+++ b/content/Dwt/Dwt.Api/appsettings.json
@@ -1,4 +1,4 @@
-{
+﻿{
   "App": {
     "Name": "Dwt",
     "Version": "0.0.0",
@@ -22,13 +22,18 @@
     // The application's main bootstrapper. It must implement Dwt.Api.Bootstrap.IApplicationBootstrapper interface.
     "Application": "Dwt.Api.Bootstrap.ApplicationBootstrapper",
 
-    // Other bootstrappers. Bootstrappers are invoked in the order defined here.
+    // Other bootstrappers: bootstrapper must implement Dwt.Api.Bootstrap.IBootstrapper or Dwt.Api.Bootstrap.IAsyncBootstrapper
+    // Bootstrappers are invoked in the order defined here.
     // - If a bootstrapper fails, the whole bootstrapping process will also fail and the application will not start.
     // - If a bootstrapper is async, it will be invoked in the background and its failure will not stop the bootstrapping process.
     "Components": [
+      "Dwt.Api.Bootstrap.ExceptionHandlersBootstrapper",
       "Dwt.Api.Bootstrap.CryptoKeysBootstrapper",
       "Dwt.Api.Bootstrap.JwtBootstrapper",
-      "Dwt.Api.Bootstrap.SampleAuthenticatorAsyncBootstrapper"
+      "Dwt.Api.Bootstrap.DbContextBootstrapper",
+      "Dwt.Api.Bootstrap.ControllersBootstrapper",
+      "Dwt.Api.Bootstrap.SwaggerBootstrapper",
+      "Dwt.Api.Bootstrap.AuthenticatorBootstrapper"
     ]
   },
 
@@ -48,7 +53,9 @@
     "Audience": "http://localhost:8080",
     "Expiration": 7200, // default expiration time in seconds
     //"Key": "S3cretK3yP@dd1ngzJh^H/9V+q),c'8I", // (min size = 32 bytes) if not empty the JWT will be signed with this key using HMACSHA256; otherwise, it will be signed with the RSA private key using RSASHA256
-    "": ""
+
+    "HTTP_CTX_ITEM_USERID": "UserId", // the key to store the user ID in the HttpContext.Items
+    "HTTP_CTX_ITEM_USER": "User"      // the key to store the user object in the HttpContext.Items
   },
 
   // Sample user database
