--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -27,6 +27,11 @@ jobs:
         uses: actions/setup-dotnet@v4
         with:
           dotnet-version: ${{ matrix.dotnet }}
+      - name: Choose .NET version
+        run: |
+          VERSION=$(echo ${{ matrix.dotnet }} | sed -E "s/^([0-9]+).*/\1/")
+          echo {\"sdk\": {\"version\": \"${VERSION}\"}} > global.json
+          cat global.json
       - name: Display dotnet version
         run: dotnet --version
       - name: Install dependencies
@@ -83,6 +88,11 @@ jobs:
         uses: actions/setup-dotnet@v4
         with:
           dotnet-version: ${{ matrix.dotnet }}
+      - name: Choose .NET version
+        run: |
+          VERSION=$(echo ${{ matrix.dotnet }} | sed -E "s/^([0-9]+).*/\1/")
+          echo {\"sdk\": {\"version\": \"${VERSION}\"}} > global.json
+          cat global.json
       - name: Display dotnet version
         run: dotnet --version
       - name: Update NuGet metadata
@@ -174,6 +184,11 @@ jobs:
         uses: actions/setup-dotnet@v4
         with:
           dotnet-version: ${{ matrix.dotnet }}
+      - name: Choose .NET version
+        run: |
+          VERSION=$(echo ${{ matrix.dotnet }} | sed -E "s/^([0-9]+).*/\1/")
+          echo {\"sdk\": {\"version\": \"${VERSION}\"}} > global.json
+          cat global.json
       - name: Display dotnet version
         run: dotnet --version
       - name: Install template
@@ -200,7 +215,7 @@ jobs:
           context: temp/
 
   TestGenerateSolutionWindows:
-    runs-on: windows-latest
+    runs-on: windows-2022
     needs: [BuildAndTestTemplate, TestDockerfileWindowsTemplate]
     strategy:
       matrix:
