CI: mimor update actions

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -75,7 +75,7 @@ jobs:
           tag-only: true
 
   TestNugetPackage:
-    needs: ReleaseDryRun
+    needs: BuildAndTestTemplate
     runs-on: ubuntu-latest
     strategy:
       matrix:
