Add Asp.NET Core Identity

--- a/content/Dwt/Dwt.Api/appsettings.json
+++ b/content/Dwt/Dwt.Api/appsettings.json
@@ -14,7 +14,13 @@
 
   "AllowedHosts": "*",
 
+  // Supported database types:
+  // - InMemory (or Memory): in-memory database, not for production use! No connection string required.
+  // - SQLite: not for production use! Connection string format: "Data Source=<directory>/<database>.db"
+  // - SQLServer: LocalDb connection string: "Server=(localdb)\\mssqllocaldb;Database=RazorPagesPizza;Trusted_Connection=True;MultipleActiveResultSets=true"
+  "DbType": "SQLSERVER",
   "ConnectionStrings": {
+    "IdentityDbContext": "Server=(localdb)\\mssqllocaldb;Database=DwtIdentity;Trusted_Connection=True;MultipleActiveResultSets=true",
     "NotesDbContext": "Data Source=./data/sqlite/todo.db"
   },
 
@@ -36,7 +42,7 @@
     //"Key": "S3cretK3yP@dd1ngzJh^H/9V+q),c'8I", // (min size = 32 bytes) if not empty the JWT will be signed with this key using HMACSHA256; otherwise, it will be signed with the RSA private key using RSASHA256
 
     "HTTP_CTX_ITEM_USERID": "UserId", // the key to store the user ID in the HttpContext.Items
-    "HTTP_CTX_ITEM_USER": "User"      // the key to store the user object in the HttpContext.Items
+    "HTTP_CTX_ITEM_USER": "User" // the key to store the user object in the HttpContext.Items
   },
 
   // Sample user database
