--- a/content/Dwt/Dwt.Shared.EF/Dwt.Shared.EF.csproj
+++ b/content/Dwt/Dwt.Shared.EF/Dwt.Shared.EF.csproj
@@ -7,9 +7,8 @@
   </PropertyGroup>
 
 	<ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.8" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.8" />
-		<PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="8.0.8" />
-		<PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="8.0.8" />
 	</ItemGroup>
 
   <ItemGroup>
