Improve AspNet core Identity suage

--- a/content/Dwt/Dwt.Api/Dwt.Api.csproj
+++ b/content/Dwt/Dwt.Api/Dwt.Api.csproj
@@ -30,6 +30,7 @@
 
   <ItemGroup>
     <Folder Include="Controllers\Samples\" />
+    <Folder Include="Middleware\" />
   </ItemGroup>
 
 </Project>
