--- a/content/Dwt/Dwt.Api/appsettings.json
+++ b/content/Dwt/Dwt.Api/appsettings.json
@@ -18,10 +18,13 @@
   // - InMemory (or Memory): in-memory database, not for production use! No connection string required.
   // - SQLite: not for production use! Connection string format: "Data Source=<directory>/<database>.db"
   // - SQLServer: LocalDb connection string: "Server=(localdb)\\mssqllocaldb;Database=RazorPagesPizza;Trusted_Connection=True;MultipleActiveResultSets=true"
-  "DbType": "SQLSERVER",
+  "DatabaseTypes": {
+    "Identity": "SQLSERVER",
+    "Application": "SQLite"
+  },
   "ConnectionStrings": {
-    "IdentityDbContext": "Server=(localdb)\\mssqllocaldb;Database=DwtIdentity;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "NotesDbContext": "Data Source=./data/sqlite/todo.db"
+    "Identity": "Server=(localdb)\\mssqllocaldb;Database=DwtIdentity;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "Application": "Data Source=./data/sqlite/application.db"
   },
 
   // Cryptography keys
@@ -40,34 +43,5 @@
     "Audience": "http://localhost:8080",
     "Expiration": 7200, // default expiration time in seconds
     //"Key": "S3cretK3yP@dd1ngzJh^H/9V+q),c'8I", // (min size = 32 bytes) if not empty the JWT will be signed with this key using HMACSHA256; otherwise, it will be signed with the RSA private key using RSASHA256
-  },
-
-  // Sample user database
-  "Users": [
-    {
-      "id": "admin",
-      "password": "@dminS3cret",
-      "role": "ADMIN" // role can be a single role or a comma-separated list of roles
-    },
-    {
-      "id": "manager",
-      "password": "M@nagerS3cret",
-      "role": "MANAGER"
-    },
-    {
-      "id": "hrstaff",
-      "password": "St@ffS3cret",
-      "role": "HR"
-    },
-    {
-      "id": "itstaff",
-      "password": "St@ffS3cret",
-      "role": "IT"
-    },
-    {
-      "id": "auditstaff",
-      "password": "St@ffS3cret",
-      "role": "HR,IT"
-    }
-  ]
+  }
 }
