--- a/content/Dwt/Dwt.Api/appsettings.json
+++ b/content/Dwt/Dwt.Api/appsettings.json
@@ -20,11 +20,13 @@
   // - SQLServer: LocalDb connection string: "Server=(localdb)\\mssqllocaldb;Database=RazorPagesPizza;Trusted_Connection=True;MultipleActiveResultSets=true"
   "DatabaseTypes": {
     "Identity": "SQLSERVER",
-    "Application": "SQLite"
+    //"Application": "SQLite",
+    "Application": "SQLSERVER"
   },
   "ConnectionStrings": {
     "Identity": "Server=(localdb)\\mssqllocaldb;Database=DwtIdentity;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "Application": "Data Source=./data/sqlite/application.db"
+    //"Application": "Data Source=./data/sqlite/application.db",
+    "Application": "Server=(localdb)\\mssqllocaldb;Database=DwtApi;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
 
   // Cryptography keys
