Add cache support

--- a/content/Dwt/Dwt.Api/appsettings.json
+++ b/content/Dwt/Dwt.Api/appsettings.json
@@ -23,10 +23,22 @@
     //"Application": "SQLite",
     "Application": "SQLSERVER"
   },
+
+  // Supported cache types:
+  // - Memory: in-memory cache, good for development and testing; or for usecases where application is running on a single instance and memory usage is not a concern.
+  // - Redis: distributed cache, good for production use; sample connection string format: "localhost:6379,abortConnect=false"
+  "Caches": {
+    "Application": {
+      "Type": "Memory",
+      "SizeLimit": 100000000, // in bytes, ~100mb
+      "Expiration": 3600 // in seconds, 1 hour
+    }
+  },
+
   "ConnectionStrings": {
-    "Identity": "Server=(localdb)\\mssqllocaldb;Database=DwtIdentity;Trusted_Connection=True;MultipleActiveResultSets=true",
-    //"Application": "Data Source=./data/sqlite/application.db",
-    "Application": "Server=(localdb)\\mssqllocaldb;Database=DwtApi;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "IdentityDbContext": "Server=(localdb)\\mssqllocaldb;Database=DwtIdentity;Trusted_Connection=True;MultipleActiveResultSets=true",
+    //"ApplicationDbContext": "Data Source=./data/sqlite/application.db",
+    "ApplicationDbContext": "Server=(localdb)\\mssqllocaldb;Database=DwtApi;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
 
   // Cryptography keys
@@ -43,7 +55,7 @@
   "Jwt": {
     "Issuer": "dotnet-webapi-template",
     "Audience": "http://localhost:8080",
-    "Expiration": 7200, // default expiration time in seconds
+    "Expiration": 7200 // default expiration time in seconds
     //"Key": "S3cretK3yP@dd1ngzJh^H/9V+q),c'8I", // (min size = 32 bytes) if not empty the JWT will be signed with this key using HMACSHA256; otherwise, it will be signed with the RSA private key using RSASHA256
   }
 }
