Configure cache settings

--- a/content/Dwt/Dwt.Api/appsettings.json
+++ b/content/Dwt/Dwt.Api/appsettings.json
@@ -29,16 +29,30 @@
   // - Redis: distributed cache, good for production use; sample connection string format: "localhost:6379,abortConnect=false"
   "Caches": {
     "Application": {
-      "Type": "Memory",
-      "SizeLimit": 100000000, // in bytes, ~100mb
-      "Expiration": 3600 // in seconds, 1 hour
+      //"Type": "Memory",
+      "Type": "Redis",
+      "Prefix": "App-", // cache key prefix, for Redis only
+      "SizeLimit": 100000000, // in bytes, ~100mb, for in-memory cache only
+      "Expiration": 3600, // in seconds, 1 hour
+      "ConnectionString": "ApplicationRedis" // points to the connection string in ConnectionStrings section
+    },
+    "Identity": {
+      //"Type": "Memory",
+      "Type": "Redis",
+      "Prefix": "Identity-",
+      "SizeLimit": 100000000, // in bytes, ~100mb, for in-memory cache only
+      "Expiration": 3600, // in seconds, 1 hour
+      "ConnectionString": "IdentityRedis" // points to the connection string in ConnectionStrings section
     }
   },
 
   "ConnectionStrings": {
     "IdentityDbContext": "Server=(localdb)\\mssqllocaldb;Database=DwtIdentity;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "IdentityRedis": "localhost:6379,abortConnect=false",
+
     //"ApplicationDbContext": "Data Source=./data/sqlite/application.db",
-    "ApplicationDbContext": "Server=(localdb)\\mssqllocaldb;Database=DwtApi;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "ApplicationDbContext": "Server=(localdb)\\mssqllocaldb;Database=DwtApi;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "ApplicationRedis": "localhost:6379,abortConnect=false"
   },
 
   // Cryptography keys
