Apply compression to cache

--- a/content/Dwt/Dwt.Api/appsettings.json
+++ b/content/Dwt/Dwt.Api/appsettings.json
@@ -17,41 +17,54 @@
   // Supported database types:
   // - InMemory (or Memory): in-memory database, not for production use! No connection string required.
   // - SQLite: not for production use! Connection string format: "Data Source=<directory>/<database>.db"
-  // - SQLServer: LocalDb connection string: "Server=(localdb)\\mssqllocaldb;Database=RazorPagesPizza;Trusted_Connection=True;MultipleActiveResultSets=true"
-  "DatabaseTypes": {
-    "Identity": "SQLSERVER",
-    //"Application": "SQLite",
-    "Application": "SQLSERVER"
+  // - SQLServer: sample of LocalDb connection string: "Server=(localdb)\\mssqllocaldb;Database=RazorPagesPizza;Trusted_Connection=True;MultipleActiveResultSets=true"
+  "Databases": {
+    "Application": {
+      "Type": "SQLServer",
+      "ConnectionString": "ApplicationSQLServer", // points to the connection string in ConnectionStrings section
+      "UseDbContextPool": true, // use DbContext pooling"
+      "PoolSize": 128 // maximum number of DbContext instances in the pool
+    },
+
+    "Identity": {
+      "Type": "SQLServer",
+      "ConnectionString": "IdentitySQLServer" // points to the connection string in ConnectionStrings section
+    }
   },
 
   // Supported cache types:
   // - Memory: in-memory cache, good for development and testing; or for usecases where application is running on a single instance and memory usage is not a concern.
   // - Redis: distributed cache, good for production use; sample connection string format: "localhost:6379,abortConnect=false"
+  // - None, or any unsupported value: no caching
   "Caches": {
     "Application": {
       //"Type": "Memory",
-      "Type": "Redis",
-      "Prefix": "App-", // cache key prefix, for Redis only
+      //"Type": "Redis",
+      "Type": "None",
+      "KeyPrefix": "App-", // cache key prefix, for Redis only
       "SizeLimit": 100000000, // in bytes, ~100mb, for in-memory cache only
-      "Expiration": 3600, // in seconds, 1 hour
+      //"ExpirationAfterWrite": 3600, // cache entries expire after specified period, in seconds. Set to 0 to disable expiration.
+      "ExpirationAfterAccess": 3600, // cache entries expire after specified period of no access, in seconds. Set to 0 to disable expiration.
+      "CompressionLevel": "NoCompression", // possible values: "NoCompression", "Optimal", "Fastest" and "SmallestSize"
       "ConnectionString": "ApplicationRedis" // points to the connection string in ConnectionStrings section
     },
+
     "Identity": {
-      //"Type": "Memory",
-      "Type": "Redis",
-      "Prefix": "Identity-",
+      "Type": "None",
+      "KeyPrefix": "Identity-",
       "SizeLimit": 100000000, // in bytes, ~100mb, for in-memory cache only
-      "Expiration": 3600, // in seconds, 1 hour
+      "ExpirationAfterWrite": 3600, // cache entries expire after specified period, in seconds. Set to 0 to disable expiration."
       "ConnectionString": "IdentityRedis" // points to the connection string in ConnectionStrings section
     }
   },
 
   "ConnectionStrings": {
-    "IdentityDbContext": "Server=(localdb)\\mssqllocaldb;Database=DwtIdentity;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "IdentitySQLite": "Data Source=./data/sqlite/identity.db",
+    "IdentitySQLServer": "Server=(localdb)\\mssqllocaldb;Database=DwtIdentity;Trusted_Connection=True;MultipleActiveResultSets=true",
     "IdentityRedis": "localhost:6379,abortConnect=false",
 
-    //"ApplicationDbContext": "Data Source=./data/sqlite/application.db",
-    "ApplicationDbContext": "Server=(localdb)\\mssqllocaldb;Database=DwtApi;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "ApplicationSQLite": "Data Source=./data/sqlite/application.db",
+    "ApplicationSQLServer": "Server=(localdb)\\mssqllocaldb;Database=DwtApi;Trusted_Connection=True;MultipleActiveResultSets=true",
     "ApplicationRedis": "localhost:6379,abortConnect=false"
   },
 
