--- a/content/Dwt/Dwt.Api/appsettings.json
+++ b/content/Dwt/Dwt.Api/appsettings.json
@@ -40,7 +40,7 @@
     "Application": {
       //"Type": "Memory",
       //"Type": "Redis",
-      "Type": "None",
+      "Type": "Memory",
       "KeyPrefix": "App-", // cache key prefix, for Redis only
       "SizeLimit": 100000000, // in bytes, ~100mb, for in-memory cache only
       //"ExpirationAfterWrite": 3600, // cache entries expire after specified period, in seconds. Set to 0 to disable expiration.
