Fix(CacheFacade) cache key prefix

--- a/content/Dwt/Dwt.Api/appsettings.json
+++ b/content/Dwt/Dwt.Api/appsettings.json
@@ -38,9 +38,9 @@
   // - None, or any unsupported value: no caching
   "Caches": {
     "Application": {
+      //"Type": "None",
       //"Type": "Memory",
-      //"Type": "Redis",
-      "Type": "Memory",
+      "Type": "Redis",
       "KeyPrefix": "App-", // cache key prefix, for Redis only
       "SizeLimit": 100000000, // in bytes, ~100mb, for in-memory cache only
       //"ExpirationAfterWrite": 3600, // cache entries expire after specified period, in seconds. Set to 0 to disable expiration.
